# poc-cng-imagery-seg-unet

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: index.html
k8s/: knative-service.yaml
recipes/: hotosm_buildings_atami_manila.py  hotosm_buildings_sag_yug.py  hotosm_buildings_sagamihara.py  hotosm_buildings_xregion_eval.py  hotosm_buildings_yugawara.py  hotosm_parking_inagi.py  hotosm_parking_isehara.py  hotosm_parks_inagi.py  hotosm_parks_sagamihara.py  hotosm_roads_sagamihara.py  hotosm_roads_yugawara.py  sentinel2_parks.py
src/imagery_seg/: __init__.py  aoi_cache.py  aoi_check.py  api.py  cache.py  cli.py  dataset.py  eval.py  infer.py  model.py  rasterize.py  recipe.py  train.py
src/imagery_seg/features/: __init__.py  base.py  building.py  park.py  parking.py  road.py
src/imagery_seg/ground_truth/: __init__.py  base.py  overpass.py  vector_tile.py
src/imagery_seg/imagery/: __init__.py  base.py  hotosm.py  sentinel2.py
stages/: 01_recipe_smoke.py
tests/: test_aoi_cache.py  test_aoi_check.py  test_cache.py  test_cli.py  test_dataset.py  test_ground_truth_overpass.py  test_imagery_hotosm.py  test_model.py  test_rasterize.py  test_recipe.py  test_road.py  test_stubs_next_target.py  test_train_eval.py
tests/fixtures/: README.md  hotosm_stac_atami.json  hotosm_stac_item_atami.json  mpc_sentinel2_atami.json  overpass_buildings_atami.json
